fix loading screen text breaking on small screens

--- a/code/UI/MainMenu/MansionLoadingPanel.razor.scss
+++ b/code/UI/MainMenu/MansionLoadingPanel.razor.scss
@@ -56,6 +56,8 @@
     padding-bottom: 5px;
     
     > .title {
+      flex-shrink: 0;
+      
       font-size: 80px;
       font-weight: bolder;
       text-shadow: 4px 4px 0px black;
@@ -67,13 +69,18 @@
       flex-direction: column;
       flex-grow: 1;
       justify-content: space-between;
+      align-items: stretch;
 
       padding: 10px;
 
       > .subtitle {
+        flex-shrink: 1;
+        
         font-size: 30px;
         color: #888;
         font-weight: 100;
+        
+        text-overflow: ellipsis;
       }
 
       > .progress {
@@ -113,6 +120,8 @@
     }
 
     > .controls {
+      flex-shrink: 0;
+      
       padding: 10px;
     }
   }
